--- a/assgn5/index.html
+++ b/assgn5/index.html
@@ -1,7 +1,84 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Assignment 5</h1>
-<p>Assignment 5 starts here.</p>
-</body>
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content= "width=device-width, initial-scale=1">
+<!--I learned the meta tag info above from the freecodecamp.org HTML tutorial referenced in my source list -->
+<link rel= "stylesheet" type= "text/css" href= "style.css"/>
+<!--I learned the CSS linking format above from Kevin Powell's YouTube tutorial referenced in my source list-->
+<title>Bun Bun Bake Shop</title>
+</head>
+    <body>
+        <div id="container">
+            <div id="header">
+                <img src=pic/"logo_2.jpg" alt="logo" class="logo">
+                <nav id="nav1">
+                    <ul>
+                        <img src=<li><input type="text" placeholder="Search">
+                        <li><a href="#"><u>Sign In</u></a></li>
+                        <li><a href="#"><u>Cart</u></a></li>
+                    </ul>
+                </nav>
+                <nav id="nav2">
+                    <ul>
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Menu</a></li>
+                        <li><a href="#">Special Orders</a></li>
+                        <li><a href="#">Locations</a></li>
+                        <li><a href="#">Store</a></li>
+                    </ul>
+                </nav>
+                    <!--I learned the logo image and navigation bar formats above from Kevin Powell's YouTube tutorial referenced in my source list-->
+            </div>
+            <div id="bluebar">
+                <hr 30px/>
+            </div>
+            <div class="hero">
+                <div class="hero-text">
+                <button>Order Online</button>
+                </div>
+                <img src=pic/"hero_image_buns.jpg" width="900" height="300" alt="glazed cinnamon buns baking in a pan"/>
+            </div>
+            <div id="features">
+                <div id="recipe">
+                    <p> Featured Recipe: <br>
+                    Bacon Buns<br>
+                    -45 minute prep<br>
+                    -Serves 4-6
+                    </p>
+                    <img src=pic/"bacon_bun.jpg">
+                </div>
+                <div id="IG">
+                    <p2> Instagram Feed: <br>
+                    Tag us and use <br>
+                    #BBB to enter our <br>
+                    amateur bakeoff
+                    </p2>
+                    <img src=pic/"Instagram.jpg">
+                </div>
+                <div id="p.spice">
+                    <p3> Watch our <br>
+                    Pumpkin Spice <br>
+                    Cinnamon Bun <br>
+                    tutorial with Sara
+                    </p3>
+                    <img src=pic/"Sara.jpg">
+                </div>
+            </div>
+            <div id="subscriptionbar">
+                <p4> Subscribe for Special Offers: <u>            Sign Up          </u>
+                </p4>
+            </div>
+            <div id="footer">
+                <nav id="nav3">
+                    <ul>
+                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="#">Help</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div id="copyright"> Copyright &copy; 2019 Lauren Jablonski
+            </div>
+        </div>
+    </body>
 </html>
