--- a/assgn5/index.html
+++ b/assgn5/index.html
@@ -11,7 +11,7 @@
 	<body>
 		<div class="container">
 			<div class="header">
-				<img src="img/BBBlogo3.png" alt="logo" class="logo">
+				<img src="BBBlogo3.png" alt="logo" class="logo">
 			</div>
 			<div class="nav1">
 				<ul>
