--- a/assgn5/detail.html
+++ b/assgn5/detail.html
@@ -33,8 +33,8 @@
             </div>
             <div class="content">
                 <p><a href="browse.html">Back to Menu</a></p>
-                <img src="img/blackberry.jpg" alt="blackberry cinnamon buns" class="product"/>
-                <p2> Blackberry $3.99<br>
+                <img src="img/blackberry.jpg" alt="blackberry cinnamon buns" id="product"/>
+                <p2> <h1>Blackberry $3.99<h1><br>
                     Blackberry is our most popular flavor. We use freshly picked, organic berries from our local community garden. The flaky, golden pastry gives way to a delicious berry compote inside. A sweet and tangy twist on a homestyle classic.<br>
                     Glaze Options: Sugar-milk<br>
                     Quanity: 3<br>
