--- a/assign 6/cart.html
+++ b/assign 6/cart.html
@@ -39,21 +39,11 @@
             <p>Shopping Cart</p>
             <img src="assets/online-store.png" alt="shopping cart icon" id="scart"/>
         </section>
-        <section class="bodycontent">
-            <div class="leftcart">
-                <a href="detail2.html"><img src="img/blackberry.jpg" alt="blackberry cinnamon buns" id="bbproduct"/></a>
-            </div>
-            <div class="rightcart">
-                <p3>Blackberry Cinnamon Bun<br>
-                    Quantity:<input type="text" readonly="" class="tbx"><br>
-                    Glaze:<input type="text" readonly="" class="tbx"><br>
-                    Price:<input type="text" readonly="" class="tbx"><br>
-                </p3>
-                <p4 id="p4">Total: <input type="text" readonly="" class="tbx" id="totalcrt">
-                </p4 >
-            </div>
+        <section id="cartDisplay" class="bodycontent">
+
         </section>
         <section>
+            <p5 id="remove"><a href="#">Empty Cart</a></p5>
             <button id="proceed">Proceed to Checkout</button>
          </section>
         <script src="index2.js"></script>
