--- a/assign 6/detail2.html
+++ b/assign 6/detail2.html
@@ -10,7 +10,6 @@
     </head>
     <body>
         <div class="container3">
-        <!-- <div class="grid"> -->
             <div class="header">
                 <a href="index.html"><img src="img/BBBlogo3.png" alt="logo" class="logo"></a>
                 <nav class="nav2">
@@ -71,7 +70,7 @@
                             <label for="" id="deettotal">Total:</label>
                         </div>
                 <div>
-                    <button id="cartbtn" onclick="updatedeetpage()">Add to Cart</button><
+                    <button id="cartbtn">Add to Cart</button><
                 </div>
                 </div>
                 <div id="Nutrition">
@@ -90,6 +89,6 @@
             <div class="copyright"> Copyright &copy; 2019 Lauren Jablonski
             </div>
         </div>
-    <script src="index2.js"></script>
+    <script src="detail3.js"></script>
     </body>
 </html>
